# ftp-client-cpp

./: .gitignore  CMakeLists.txt  FTPClientApp-GUI.cpp  FTPClientApp.cpp  LICENSE  Makefile  README.md  main.cpp
include/: FTPClient.h  FTPResponseParser.h  FTPUtilities.h
include/ftp_library/: FTPClient.cpp  FTPClient.h  FTPResponseParser.cpp  FTPResponseParser.h  FTPUtilities.cpp  FTPUtilities.h  Framework.h
src/: FTPClient.cpp  FTPResponseParser.cpp  FTPUtilities.cpp
tests/: FTPClientTest.cpp  FTPResponseParserTest.cpp  FTPUtilitiesTest.cpp
